--- a/GOLFPROJ/GOLFPROJ.vcxproj.filters
+++ b/GOLFPROJ/GOLFPROJ.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="shaders_class.cpp">
+    <ClCompile Include="glad.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="glad.cpp">
+    <ClCompile Include="shader_class.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
