working: world revolves.  Decision time for text output or a file stream that I watch as world changes.  Two possibilities for text display.  Having difficulties with conflicting defines, though.  If I get help that is the simplest, otherwise there is an interface I could use.

--- a/GOLFPROJ/GOLFPROJ.vcxproj.filters
+++ b/GOLFPROJ/GOLFPROJ.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="glad.cpp">
+    <ClCompile Include="shader_class.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="shader_class.cpp">
+    <ClCompile Include="glad1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
