might need to reinclude glad1.cpp

--- a/GOLFPROJ/GOLFPROJ.vcxproj
+++ b/GOLFPROJ/GOLFPROJ.vcxproj
@@ -19,7 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="glad1.cpp" />
     <ClCompile Include="shader_class.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -105,7 +104,7 @@
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLFW_INCLUDE_NONE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>C:\openglusage;C:\freeglutuntarred\freeglut-3.0.0\freeglut-3.0.0\include;C:\GLUT;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AdditionalUsingDirectories>%(AdditionalUsingDirectories)</AdditionalUsingDirectories>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>C:\openglusage;C:\libs</AdditionalLibraryDirectories>
