--- a/GOLFPROJ/GOLFPROJ.vcxproj.filters
+++ b/GOLFPROJ/GOLFPROJ.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Source Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="glad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
