viewing, now.  need to change even row of triangles.  Also projection not done yet.

--- a/GOLFPROJ/GOLFPROJ.vcxproj
+++ b/GOLFPROJ/GOLFPROJ.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="glad1.cpp" />
     <ClCompile Include="shader_class.cpp" />
   </ItemGroup>
   <ItemGroup>
