still need to check the drawworld2 and am fairly ready to test drawing the ball soon!

--- a/GOLFPROJ/GOLFPROJ.vcxproj
+++ b/GOLFPROJ/GOLFPROJ.vcxproj
@@ -25,6 +25,8 @@
   <ItemGroup>
     <None Include="3.3.shader.fs" />
     <None Include="3.3.shader.vs" />
+    <None Include="shader2.fs" />
+    <None Include="shader2.vs" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glad.h" />
